--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ nickname: sotolf
 bio: 'A Systems Administrator and IT-person'
 location: 'Kärnten, AT'
 url: 'http://opsahl.github.io/'
-image: 'assets/images/casper.png'
+image: 'assets/images/sotolf.jpg'
 
 short_url: 'opsahl.github.io'
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
